# python-logic-exercices

./: README.md  pyproject.toml
src/python_logic_exercices/: array_object_logic.py  main.py  object_logic.py  string_logic.py
tests/: test_array_object_logic.py  test_object_logic.py  test_string_logic.py
